fix chrome layout issue

--- a/blocks/Section/css/section.less
+++ b/blocks/Section/css/section.less
@@ -30,6 +30,7 @@ section#courseware {
         display: inline-block;
         font-size: unset;
         button {
+            overflow: hidden;
             &.edit  { .btn(edit); }
             &.trash { .btn(trash); }
         }
